--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 certifi==2020.12.5
 chardet==4.0.0
-idna==2.10
+idna==3.1
 requests==2.25.1
 urllib3==1.26.4
+
+vonage~=2.5.5
+pytz~=2021.1
+bs4~=0.0.1
+beautifulsoup4~=4.9.3
+APScheduler~=3.7.0
